--- a/git_commands.tex
+++ b/git_commands.tex
@@ -3,7 +3,7 @@
 \setlength{\parindent}{1cm}
 %opening
 \title{Summary of Git commands}
-\author{}
+\author{by George Creekbed: github.com/George-Creekbed}
 \date{}
 
 \begin{document}
