added reference to proGit

--- a/git_commands.tex
+++ b/git_commands.tex
@@ -3,7 +3,8 @@
 \setlength{\parindent}{1cm}
 %opening
 \title{Summary of Git commands}
-\author{by George Creekbed: github.com/George-Creekbed}
+\author{quick look-up list extracted from the official \texttt{pro Git} manual}
+%\author{by George Creekbed: github.com/George-Creekbed}
 \date{}
 
 \begin{document}
